<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    tools:context=".WeatherApp">

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="12dp"
        android:background="@color/colorPrimaryDark"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/city_search_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/search_view_box"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/search_layout"
        app:layout_constraintBottom_toBottomOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="12dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/currentWeatherDate"
                        android:layout_width="175dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="12dp"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/_date" />

                    <TextView
                        android:id="@+id/currentWeatherCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/_city" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/currentWeatherImage"
                            android:layout_width="140dp"
                            android:layout_height="175dp"
                            android:background="@drawable/ic_moderate_rain" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/currentWeatherDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-32dp"
                            android:layout_gravity="center"
                            android:textSize="16sp"
                            android:text="@string/placeholder_desc" />

                    </LinearLayout>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical" >

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/currentWeatherMin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:text="@string/placeholder_min"
                                android:textColor="@color/colorAccent"
                                android:textSize="14sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/currentWeatherMax"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:text="@string/placeholder_max"
                                android:textColor="@color/colorPrimary"
                                android:textSize="14sp"/>

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/currentWeatherTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/placeholder_temp"
                            android:textColor="@color/colorBlack"
                            android:textSize="50sp"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/currentWeatherFeels"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/placeholder_feels"
                            android:textSize="13sp"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="start"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/weather_info"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="2dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/placeholder_wind"
                        android:textSize="13sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/currentWeatherWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/placeholder_wind_value"
                        android:textSize="13sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="2dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/placeholder_humidity"
                        android:textSize="13sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/currentWeatherHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/placeholder_humidity_value"
                        android:textSize="13sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="2dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/placeholder_visibility"
                        android:textSize="13sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/currentWeatherVisibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/placeholder_visibility_value"
                        android:textSize="13sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="2dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/placeholder_cloudiness"
                        android:textSize="13sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/currentWeatherCloudiness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/placeholder_cloudiness_value"
                        android:textSize="13sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="2dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="75dp"
                        android:layout_height="50dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/placeholder_rain"
                        android:textSize="13sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/currentWeatherRain"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="100dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/placeholder_rain_value"
                        android:textSize="13sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="2dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="75dp"
                        android:layout_height="50dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/placeholder_snow"
                        android:textSize="13sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/currentWeatherSnow"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="100dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/placeholder_snow_value"
                        android:textSize="13sp"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/forecast_info"
                    android:textSize="16sp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/forecastRecycleView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:elevation="12dp"
                    android:background="@color/colorAccent"
                    android:layout_margin="6dp"
                    android:scrollbars="vertical">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>