<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="0dp"
    android:padding="4dp">
    
    <androidx.cardview.widget.CardView
        android:id="@+id/forecast_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp"
            android:layout_margin="2dp">

            <TextView
                android:id="@+id/forecast_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/forecast_date"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/forecast_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/forecast_desc"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forecast_date" />

            <ImageView
                android:id="@+id/forecast_img"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_sunny"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/forecast_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/forecast_temp"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toStartOf="@id/forecast_img"
                app:layout_constraintTop_toBottomOf="@id/forecast_max"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/forecast_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/forecast_temp"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@id/forecast_img"
                app:layout_constraintBottom_toTopOf="@id/forecast_min"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>